<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrhsmt.sisheng.ResultActivity">
    <LinearLayout
        android:id="@+id/screenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/first_screen_bg"
        android:weightSum="100">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/screen8_1"
            android:textSize="50sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/txtMessage1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/screen8_2"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/txtMessage2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/screen8_3"
            android:textSize="66sp" />


        <TextView
            android:id="@+id/txtScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                style="@style/style_btn"
                android:textStyle="bold"
                android:text="@string/screen8_4"
                android:textSize="40sp"
                android:textAlignment="center"
                android:gravity="center_vertical" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                style="@style/style_btn"
                android:textStyle="bold"
                android:text="@string/screen8_5"
                android:textSize="40sp"
                android:textAlignment="center"
                android:gravity="center_vertical" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
