<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chrhsmt.sisheng.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pi_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pi_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/test_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="piテスト" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sample_audios"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:entries="@array/sample_audios"
            android:prompt="@string/audio_prompt"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/mfsz_samples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:prompt="@string/audio_prompt"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:entries="@array/sexes"
            android:prompt="@string/sex_prompt"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/algorithm"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:prompt="@string/algorithm_prompt"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/sampling_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:prompt="@string/sampling_rate_prompt"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="測定開始"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/test_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手本再生" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/analyze_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyze_button_title"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/recorded_sample_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/recorded_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/attempt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="録音サンプル再生" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>
