<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrhsmt.sisheng.FirstScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/first_screen_bg"
        android:weightSum="100">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />

        <TextView
            android:id="@+id/textFirstScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:text="@string/screen1_1"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btnMan"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                style="@style/style_btn"
                android:textStyle="bold"
                android:text="@string/screen1_2"
                android:textSize="40sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <Button
                android:id="@+id/btnWoman"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                style="@style/style_btn"
                android:textStyle="bold"
                android:text="@string/screen1_3"
                android:textSize="40sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

        <TextView
            android:id="@+id/textFirstScreenTitle2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:text="@string/screen1_4"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="40sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btnRandom"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rounded_corners_30dp"
                android:textStyle="bold"
                android:text="@string/screen1_5"
                android:textSize="40sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <Button
                android:id="@+id/btnNini"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rounded_corners_30dp"
                android:textStyle="bold"
                android:text="@string/screen1_6"
                android:textSize="40sp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
